update jupyter file

--- a/Proyecto/4.final_project.ipynb
+++ b/Proyecto/4.final_project.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Buscador de texto en Wikipedia por palabras claves usando VSM y similitud coseno\n",
+    "### Autores: Miguel Pedraza, Yenner Robayo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +19,7 @@
     "from time import time\n",
     "from collections import Counter\n",
     "\n",
+    "# Definición de metodos utilizados en el algoritmo de busqueda\n",
     "\n",
     "def opendDocuments():\n",
     "    file_inverdIndex = open(\"inverterIndex.txt\", \"r\", encoding='utf-8')\n",
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,48 +78,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algoritmo de Búsqueda"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingrese la consulta: facebook\n",
+      "Ingrese la consulta: universidad de los llanos\n",
       "\n",
-      "Tiempo total de la busqueda 0.095s.\n",
-      "Total de documentos encontrados: 5\n",
-      "La consulta es: facebook\n",
+      "Tiempo total de la busqueda 0.682s.\n",
+      "Total de documentos encontrados: 55\n",
+      "La consulta es: universidad de los llanos\n",
       "\n",
-      "Documento encontrado: #0, cs: 0.105620\n",
-      "Documento #172: La Nave de Oseberg La Nave de Oseberg es un estudio de grabación musical situado en Buenos Aires, Argentina. Desde el año 1997 funciona realizando producciones principalmente de bandas de heavy metal, y estilos afines. Por dicho estudio han pasado enorme cantidad de grupos, como Rata Blanca, Tarja Turunen, JAF, Logos, Skiltron, Adrián Barilari, Lörihen, Fabio Lione, Horcas, Doogie White, Gillman entre muchos otros.\n",
+      "Documento encontrado: #0, cs: 0.040172\n",
+      "Documento #76: José Antonio Balseiro José Antonio Balseiro (Córdoba, 29 de marzo de 1919 - Bariloche, 26 de marzo de 1962) fue un importante físico argentino.\n",
+      "José Antonio Balseiro nació en la ciudad de Córdoba el 29 de marzo de 1919, cuarto hijo de Antonio Balseiro, quien había emigrado de España en su adolescencia, y de Victoria Lahore, argentina de origen francés.\n",
+      "En 1933 ingresa al Colegio Nacional de Monserrat dependiente de la Universidad de Córdoba, de donde egresa con el título de bachiller en 1938.\n",
+      "Ba\n",
       "\n",
+      "Documento encontrado: #1, cs: 0.038633\n",
+      "Documento #8: Comitán de Domínguez Comitán de Domínguez (antes Comitán de las Flores) en honor al prócer de la palabra libre Belisario Domínguez Palencia, el mayor héroe civil de México nacido en Comitán (Komitl-tlan lugar de alfareros) palabra que fue castellanizada como Comitán. También el nombre prehispánico de Comitán fue Balún Canán que significa \"Lugar de las nueve estrellas[4]​\".\n",
+      "Es la ciudad más antigua de Chiapas con acta constitutiva de febrero de 1528, y el asentamiento humano históricamente en\n",
       "\n",
-      "== Historia ==\n",
-      "Fundado por Martín Toledo, desde su creación hasta el presente h\n",
-      "\n",
-      "Documento encontrado: #1, cs: 0.073517\n",
-      "Documento #156: Kune Kune («conjuntamente» o «juntos» en esperanto) es una red social distribuida, construida con y como software libre y código abierto. Está enfocada más en la colaboración entre grupos de trabajo que en la comunicación entre individuos.[1]​[2]​[3]​ Su principal objetivo es permitir la creación de espacios de trabajo colaborativo en línea donde las organizaciones e individuos puedan construir proyectos, coordinar agendas comunes, celebrar reuniones, publicar contenidos en la web y hacer alianz\n",
-      "\n",
-      "Documento encontrado: #2, cs: 0.069637\n",
-      "Documento #186: Club Deportivo Canillas El Club Deportivo Canillas es un club español de fútbol de la villa de Madrid, del barrio de Canillas (Distrito de Hortaleza). Fue fundado en 1961 y juega actualmente en la categoría Preferente de Aficionados de la Comunidad de Madrid.\n",
-      "\n",
-      "\n",
-      "== Historia ==\n",
-      "El club fue fundado en 1961 por un grupo de amigos que solía reunirse en un bar llamado Los Merinos de la calle Nápoles del madrileño barrio de Canillas, para disputar partidos de forma amateur. En sus orígenes el equipo se\n",
-      "\n",
-      "Documento encontrado: #3, cs: 0.041534\n",
-      "Documento #499: Octavia Spencer Octavia Spencer (Montgomery, Alabama, 25 de mayo de 1970) es una actriz, directora, productora y guionista estadounidense de cine y televisión. Ganadora de un Premio Óscar, un Globo de Oro, un BAFTA y un Premio del Sindicato de Actores.[2]​[3]​[4]​[5]​\n",
-      "Ha participado en películas como Coach Carter (2005), Pulse (2006), The Help (2011) y Hidden Figures (2016). Asimismo también ha participado en varios capítulos de la versión estadounidense de Ugly Betty en 2007.\n",
+      "Documento encontrado: #2, cs: 0.036837\n",
+      "Documento #451: Yvonne Domenge Yvonne Domenge (México, D. F., 1946) es una escultora mexicana cuyas obras forman parte de varias instituciones tanto a nivel nacional como internacional.[1]​[2]​\n",
       "\n",
       "\n",
       "== Biografía ==\n",
       "\n",
+      "Yvonne Domenge nació en México, CDMX, donde estudió artes plásticas así como en Montreal y en Washington D. C.. Igualmente, cursó la carrera de desarrollo humano en la Universidad Iberoamericana.\n",
+      "Tras esto, ha impartido cursos y talleres además de ser la coordinadora de proyectos socioeconómicos relati\n",
       "\n",
-      "Documento encontrado: #4, cs: 0.017759\n",
-      "Documento #490: Julen Guerrero Julen Guerrero López (Portugalete, Vizcaya, España, 7 de enero de 1974), más conocido como Julen Guerrero, es un ex futbolista español. Jugaba en la posición de mediapunta y desarrolló toda su carrera profesional en el Athletic Club de la Primera División de España. Fue capitán del club rojiblanco desde 1995 hasta su retirada en 2006.\n",
-      "Julen Guerrero fue considerado durante los años 90 una de las grandes promesas del fútbol español, llegando a recibir ofertas de grandes clubes euro\n",
+      "Documento encontrado: #3, cs: 0.036245\n",
+      "Documento #404: Sagrario Martínez Carrera Sagrario Martínez Carrera (Barcelona, 10 de mayo de 1925 - Madrid, 18 de diciembre de 2011) fue una química española.[1]​\n",
+      "En 1948 se licenció en Ciencias Químicas en la Universidad Complutense de Madrid y en 1955 obtuvo un doctorado.[2]​ Fue profesora de Investigación del Consejo Superior de Investigaciones Científicas (CSIC), trabajó en el Departamento de Cristalografía del Instituto de Química Física \"Rocasolano\" de Madrid desde 1950. Este Departamento se puede consid\n",
+      "\n",
+      "Documento encontrado: #4, cs: 0.035441\n",
+      "Documento #410: María Teresa Alario María Teresa Alario Trigueros (Palencia, 17 de junio de 1954) es una historiadora española y curadora de arte. Doctora en historia del arte y especialista en la historia de la arte en la educación, las mujeres en la historia del arte contemporáneo y arquitectura y urbanismo español del siglo XIX. Es directora de la Cátedra de estudios de Género de la Universidad de Valladolid desde 2011 donde fue vicerrectora de 2004 a 2006[1]​ y desde 2016 es Académica Numeraria de la Instit\n",
+      "\n",
+      "Documento encontrado: #5, cs: 0.030243\n",
+      "Documento #364: Lyndon Hardy Lyndon Maurice Hardy es un físico, empresario y escritor de fantasía estadounidense.\n",
+      "\n",
+      "\n",
+      "== Biografía ==\n",
+      "Miembro de la Asociación de escritores de ciencia ficción y fantasía de Estados Unidos,[1]​ asistió al Instituto de Tecnología de California como alumno y luego a la Universidad de California en Berkeley para su licenciatura.[2]​\n",
+      "En sus años de universidad quedó fascinado con el reino de la fantasía. Fuera de su ocupación como escritor ha trabajado en correspondencia con la Socieda\n",
+      "\n",
+      "Documento encontrado: #6, cs: 0.025717\n",
+      "Documento #414: José Graciano Sortheix José Graciano Sortheix (Monteros, 1873- San Miguel de Tucumán, Argentina, 1954), fue un académico y político tucumano. Fue gobernador de la Provincia de Tucumán entre 1928 y 1930 y rector de la Universidad Nacional de Tucumán, entre 1942 y 1943.\n",
+      "\n",
+      "\n",
+      "== Biografía ==\n",
+      "Nació en la localidad de Monteros, Tucumán, siendo hijo de Pierre Sortheix, y de María Mignaberry. Su familia se dedicaba a las actividades rurales en ese departamento del interior tucumano, enviando a sus hijos a\n",
+      "\n",
+      "Documento encontrado: #7, cs: 0.024265\n",
+      "Documento #187: El juego de los insectos El juego de los insectos es una ópera en dos actos con música del compositor mexicano Federico Ibarra y con libreto de Verónica Musalem.\n",
+      "\n",
+      "\n",
+      "== Música ==\n",
+      "La partitura trata de recrear la música de los años 30 intentando conjugar la música popular de esos años con la música culta.\n",
+      "\n",
+      "\n",
+      "== Datos históricos ==\n",
+      "La ópera de El juego de los insectos se basa en la obra homónima de teatro de los checos Karel Čapek y Josef Čapek escrita en 1921 . La obra se estrenó con la dirección es\n",
+      "\n",
+      "Documento encontrado: #8, cs: 0.023772\n",
+      "Documento #34: Antonio Pecorara Antonio Pecorara (n. Región del Bio-Bio, Chile, 1935) es el seudónimo de José Rotunno Garrido Pecorara, escritor chileno radicado en Argentina. Estudió Letras en la Universidad de Chile y sus primeros cuentos fueron emitidos en el programa Cuentos de Chile 1980 por Radio Universidad de Concepción. Establecido temporalmente en la ciudad nortina de Copiapó, colaboró como periodista gráfico en el diario Atacama con artículos locales para su columna Partículas Copiapinas. Ahí fue pu\n",
+      "\n",
+      "Documento encontrado: #9, cs: 0.023432\n",
+      "Documento #264: John Battelle John Linwood Battelle es un periodista así como fundador y presidente de la Federated Media Publishing.[1]​ Ha sido profesor visitante de periodismo en la Universidad de Berkeley. Además mantiene Searchblog[2]​ , un blog sobre la búsqueda, tecnología y multimedia.\n",
+      "Battelle es uno de los fundadores primitivos de la revista Wired, el fundador de la revista The Industry Standard, y manager del blog colaborativo Boing Boing. También ha escrito para Business 2.0 y es presidente de la co\n",
+      "\n",
+      "Documento encontrado: #10, cs: 0.022939\n",
+      "Documento #316: Guillermo Tell Villegas Guillermo Tell Villegas (Valencia, Estado de Venezuela, 1823 - ibídem, 21 de marzo de 1907) fue un político venezolano, presidente interino de su país en tres ocasiones: entre el 20 de junio de 1868 y el 20 de febrero de 1869, entre el 26 y el 27 de abril de 1870 y entre el 17 de junio y el 7 de octubre de 1892. Fue tío de Guillermo Tell Villegas Pulido.\n",
+      "Egresado en derecho de la Universidad Central de Venezuela, en 1859 fue gobernador de Barinas, en 1863 diputado en la A\n",
       "\n"
      ]
     }
