update final project
add rendimiento.xlsx
add presentation in .pdf

--- a/Proyecto/4.final_project.ipynb
+++ b/Proyecto/4.final_project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,8 @@
     "            for key in inverdIndex.get(word):\n",
     "                if key not in cos_sim:                    \n",
     "                    cos_sim[key] = utils.cosineSimilarity(tfidf, allTfidf[key])\n",
-    "    return cos_sim\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return cos_sim\n",
+    "\n",
     "# abrir documentos con los documentos procesados\n",
     "inverdIndex, stopwords, allTfidf, corpus, inv_frec_vector = opendDocuments()"
    ]
@@ -86,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,72 +88,62 @@
      "text": [
       "Ingrese la consulta: universidad de los llanos\n",
       "\n",
-      "Tiempo total de la busqueda 0.682s.\n",
-      "Total de documentos encontrados: 55\n",
+      "Tiempo total de la busqueda 1.986s.\n",
+      "Total de documentos encontrados: 111\n",
       "La consulta es: universidad de los llanos\n",
       "\n",
-      "Documento encontrado: #0, cs: 0.040172\n",
-      "Documento #76: José Antonio Balseiro José Antonio Balseiro (Córdoba, 29 de marzo de 1919 - Bariloche, 26 de marzo de 1962) fue un importante físico argentino.\n",
-      "José Antonio Balseiro nació en la ciudad de Córdoba el 29 de marzo de 1919, cuarto hijo de Antonio Balseiro, quien había emigrado de España en su adolescencia, y de Victoria Lahore, argentina de origen francés.\n",
-      "En 1933 ingresa al Colegio Nacional de Monserrat dependiente de la Universidad de Córdoba, de donde egresa con el título de bachiller en 1938.\n",
-      "Ba\n",
+      "Documento encontrado: #0, cs: 0.069000\n",
+      "Documento #559: José Santos Degollado El general José Nemesio Francisco Degollado Sánchez, mejor conocido como Santos Degollado (Guanajuato, México, 30 de octubre de 1811 - Llanos de Salazar, Estado de México, 15 de junio de 1861) se le conoce como el Héroe de las Derrotas, aunque tenía la rara habilidad de poder convocar posterior a sus derrotas, nuevos ejércitos a su mando. Fue un militar y político mexicano que se dedicó además, a la geografía, filosofía, física, gramática, matemáticas, jurisprudencia, histo\n",
       "\n",
-      "Documento encontrado: #1, cs: 0.038633\n",
-      "Documento #8: Comitán de Domínguez Comitán de Domínguez (antes Comitán de las Flores) en honor al prócer de la palabra libre Belisario Domínguez Palencia, el mayor héroe civil de México nacido en Comitán (Komitl-tlan lugar de alfareros) palabra que fue castellanizada como Comitán. También el nombre prehispánico de Comitán fue Balún Canán que significa \"Lugar de las nueve estrellas[4]​\".\n",
-      "Es la ciudad más antigua de Chiapas con acta constitutiva de febrero de 1528, y el asentamiento humano históricamente en\n",
+      "Documento encontrado: #1, cs: 0.058880\n",
+      "Documento #807: Universidad de la medicina y ciencias de la salud La Universidad de la medicina y ciencias de la salud (en inglés: University of Medicine and Health Sciences)[1]​ conocida a menudo como UMHS es una universidad con fines de lucro fundada y financiada por el Dr. Robert Ross, el fundador y ex propietario de la Universidad de Ross, que ofrece un programa que sigue el modelo tradicional de EE.UU. en la medicina, en la isla caribeña de San Cristóbal, que ofrece un currículo de 4 semestres de ciencias \n",
       "\n",
-      "Documento encontrado: #2, cs: 0.036837\n",
-      "Documento #451: Yvonne Domenge Yvonne Domenge (México, D. F., 1946) es una escultora mexicana cuyas obras forman parte de varias instituciones tanto a nivel nacional como internacional.[1]​[2]​\n",
+      "Documento encontrado: #2, cs: 0.045022\n",
+      "Documento #440: Patricia Holmes La Sra. Patricia Ann Holmes es una alta funcionaria de carrera del Ministerio de Relaciones Exteriores y Comercio Internacional de Australia. Antes de su designación como Embajadora en Argentina (con acreditación concurrente en Paraguay y Uruguay), fue Directora General de Consejería Legal, cargo que ocupó desde abril de 2010. La Sra. Holmes ha ejercido funciones previamente ante la Organización Mundial del Comercio en Ginebra (Consejera, 2006-2009); en Papúa-Nueva Guinea (Primer\n",
       "\n",
+      "Documento encontrado: #3, cs: 0.038221\n",
+      "Documento #360: Museo de Ciencias Naturales de la Universidad de Zaragoza El Museo de Ciencias Naturales de la Universidad de Zaragoza es un museo ubicado en Zaragoza, España, que fue inaugurado el 11 de diciembre de 2015 y que presenta, a través de fósiles de plantas y animales, así como de animales disecados, una historia del planeta desde su origen hasta la aparición del Homo sapiens. El museo se compone principalmente de dos colecciones: la del antiguo Museo Paleontológico y la colección Longinos Navás.[1]​\n",
       "\n",
-      "== Biografía ==\n",
+      "Documento encontrado: #4, cs: 0.037111\n",
+      "Documento #142: Segunda División de Chile 1956 El Campeonato Nacional de Fútbol de la Segunda División de 1956 fue el quinto torneo disputado de la segunda categoría del fútbol profesional chileno. Contó con la participación de ocho equipos.\n",
+      "En esta edición del torneo hizo su debut en el profesionalismo La Serena. Además Maestranza Central y San Bernardo F.C. se fusionaron dando origen a San Bernardo Central.\n",
+      "El torneo se jugó en tres rondas con un sistema de todos contra todos y el campeón del torneo fue Unive\n",
       "\n",
-      "Yvonne Domenge nació en México, CDMX, donde estudió artes plásticas así como en Montreal y en Washington D. C.. Igualmente, cursó la carrera de desarrollo humano en la Universidad Iberoamericana.\n",
-      "Tras esto, ha impartido cursos y talleres además de ser la coordinadora de proyectos socioeconómicos relati\n",
-      "\n",
-      "Documento encontrado: #3, cs: 0.036245\n",
-      "Documento #404: Sagrario Martínez Carrera Sagrario Martínez Carrera (Barcelona, 10 de mayo de 1925 - Madrid, 18 de diciembre de 2011) fue una química española.[1]​\n",
-      "En 1948 se licenció en Ciencias Químicas en la Universidad Complutense de Madrid y en 1955 obtuvo un doctorado.[2]​ Fue profesora de Investigación del Consejo Superior de Investigaciones Científicas (CSIC), trabajó en el Departamento de Cristalografía del Instituto de Química Física \"Rocasolano\" de Madrid desde 1950. Este Departamento se puede consid\n",
-      "\n",
-      "Documento encontrado: #4, cs: 0.035441\n",
-      "Documento #410: María Teresa Alario María Teresa Alario Trigueros (Palencia, 17 de junio de 1954) es una historiadora española y curadora de arte. Doctora en historia del arte y especialista en la historia de la arte en la educación, las mujeres en la historia del arte contemporáneo y arquitectura y urbanismo español del siglo XIX. Es directora de la Cátedra de estudios de Género de la Universidad de Valladolid desde 2011 donde fue vicerrectora de 2004 a 2006[1]​ y desde 2016 es Académica Numeraria de la Instit\n",
-      "\n",
-      "Documento encontrado: #5, cs: 0.030243\n",
-      "Documento #364: Lyndon Hardy Lyndon Maurice Hardy es un físico, empresario y escritor de fantasía estadounidense.\n",
+      "Documento encontrado: #5, cs: 0.034693\n",
+      "Documento #657: Jardín Botánico de la Universidad Bíblica Seinan Gakuin El Jardín Botánico de la Universidad Bíblica Seinan Gakuin en japonés: 西南学院大学聖書植物園, es un jardín botánico que se encuentra esparcido por el campus de la Universidad Bíblica Seinan Gakuin y un pequeño recinto de cultivo de de unos 600 m², en la ciudad de Fukuoka, Prefectura de Fukuoka, Japón. Depende administrativamente de la universidad.\n",
       "\n",
       "\n",
-      "== Biografía ==\n",
-      "Miembro de la Asociación de escritores de ciencia ficción y fantasía de Estados Unidos,[1]​ asistió al Instituto de Tecnología de California como alumno y luego a la Universidad de California en Berkeley para su licenciatura.[2]​\n",
-      "En sus años de universidad quedó fascinado con el reino de la fantasía. Fuera de su ocupación como escritor ha trabajado en correspondencia con la Socieda\n",
+      "== Localización ==\n",
+      "33°35′N 130°24′E\n",
+      "Altitud : de 2,5 msnm\n",
+      "Temperatura media anual : 16,6°C (de 1976 a \n",
       "\n",
-      "Documento encontrado: #6, cs: 0.025717\n",
-      "Documento #414: José Graciano Sortheix José Graciano Sortheix (Monteros, 1873- San Miguel de Tucumán, Argentina, 1954), fue un académico y político tucumano. Fue gobernador de la Provincia de Tucumán entre 1928 y 1930 y rector de la Universidad Nacional de Tucumán, entre 1942 y 1943.\n",
+      "Documento encontrado: #6, cs: 0.033808\n",
+      "Documento #438: Manuel Sanchis i Marco Manuel Sanchis i Marco Nació en Valencia en 1955, es profesor de Economía Aplicada de la Universidad de Valencia.\n",
       "\n",
       "\n",
       "== Biografía ==\n",
-      "Nació en la localidad de Monteros, Tucumán, siendo hijo de Pierre Sortheix, y de María Mignaberry. Su familia se dedicaba a las actividades rurales en ese departamento del interior tucumano, enviando a sus hijos a\n",
+      "Cursó estudios de economía en la Universidad Comercial de Deusto (1972-73). Es Licenciado (1972-1977) y Doctor con Cum Laude y Premio Extraordinario de Doctorado(1984) en Ciencias Económicas por la Universidad de Valencia. Es Licenciado en Filosofía (2012) y Máster en Ética y Democracia (2013) por la Universidad de Valencia. Es Profesor Titula\n",
       "\n",
-      "Documento encontrado: #7, cs: 0.024265\n",
-      "Documento #187: El juego de los insectos El juego de los insectos es una ópera en dos actos con música del compositor mexicano Federico Ibarra y con libreto de Verónica Musalem.\n",
+      "Documento encontrado: #7, cs: 0.033033\n",
+      "Documento #49: Valle del Huasco El Valle del Huasco, es el valle donde discurre el río Huasco. Está ubicado en la provincia de Huasco, Región de Atacama, Chile.\n",
+      "La Hoya del Huasco está limitada al norte por las montañas de Pulido; al este, por la parte de Los Andes entre el cerro El Potro y la cordillera de Doña Ana; y al sur, por la rama que se desprende de estas últimas montañas para dirigirse al “Alto de Peralta” y al cerro Pajonal. Su superficie es de 10 000 km cuadrados.\n",
+      "Cerca de la localidad de Las Junta\n",
+      "\n",
+      "Documento encontrado: #8, cs: 0.030231\n",
+      "Documento #924: Bartolomé Escandell Bartolomé Escandell Bonet (Ibiza, 24 de febrero de 1924 – 19 de octubre de 2012)[1]​ fue un historiador español.\n",
       "\n",
       "\n",
-      "== Música ==\n",
-      "La partitura trata de recrear la música de los años 30 intentando conjugar la música popular de esos años con la música culta.\n",
+      "== Biografía ==\n",
+      "De linaje muy ligado a la isla de Ibiza, su padre obtuvo éxito en el mundo de la hostelería construyendo en septiembre de 1932 el Hotel España, el primer edificio que recibe el título de hotel en la isla.\n",
+      "Escandell obtuvo los estudios primarios en el colegio de las monjas de la Consolación de la ciudad ibicenca y los secundarios en el Instituto de\n",
       "\n",
+      "Documento encontrado: #9, cs: 0.030153\n",
+      "Documento #849: Janet Mock Janet Mock es una escritora y abogada, que públicamente compartió la historia de su transición adolescente en Marie Claire y un testimonio de vídeo para el proyecto \"It Gets Better!\" en 2011. Nacida en Honolulu , Hawái. Janet habla sobre el retrato, las luchas y los triunfos de las mujeres transexuales, fundó y dirige la campaña digital # GirlsLikeUs para dar poder a las mujeres transexuales, y escribió sobre su búsqueda para vivir visiblemente en \"Fish Food\": sus memorias que serán p\n",
       "\n",
-      "== Datos históricos ==\n",
-      "La ópera de El juego de los insectos se basa en la obra homónima de teatro de los checos Karel Čapek y Josef Čapek escrita en 1921 . La obra se estrenó con la dirección es\n",
-      "\n",
-      "Documento encontrado: #8, cs: 0.023772\n",
-      "Documento #34: Antonio Pecorara Antonio Pecorara (n. Región del Bio-Bio, Chile, 1935) es el seudónimo de José Rotunno Garrido Pecorara, escritor chileno radicado en Argentina. Estudió Letras en la Universidad de Chile y sus primeros cuentos fueron emitidos en el programa Cuentos de Chile 1980 por Radio Universidad de Concepción. Establecido temporalmente en la ciudad nortina de Copiapó, colaboró como periodista gráfico en el diario Atacama con artículos locales para su columna Partículas Copiapinas. Ahí fue pu\n",
-      "\n",
-      "Documento encontrado: #9, cs: 0.023432\n",
-      "Documento #264: John Battelle John Linwood Battelle es un periodista así como fundador y presidente de la Federated Media Publishing.[1]​ Ha sido profesor visitante de periodismo en la Universidad de Berkeley. Además mantiene Searchblog[2]​ , un blog sobre la búsqueda, tecnología y multimedia.\n",
-      "Battelle es uno de los fundadores primitivos de la revista Wired, el fundador de la revista The Industry Standard, y manager del blog colaborativo Boing Boing. También ha escrito para Business 2.0 y es presidente de la co\n",
-      "\n",
-      "Documento encontrado: #10, cs: 0.022939\n",
-      "Documento #316: Guillermo Tell Villegas Guillermo Tell Villegas (Valencia, Estado de Venezuela, 1823 - ibídem, 21 de marzo de 1907) fue un político venezolano, presidente interino de su país en tres ocasiones: entre el 20 de junio de 1868 y el 20 de febrero de 1869, entre el 26 y el 27 de abril de 1870 y entre el 17 de junio y el 7 de octubre de 1892. Fue tío de Guillermo Tell Villegas Pulido.\n",
-      "Egresado en derecho de la Universidad Central de Venezuela, en 1859 fue gobernador de Barinas, en 1863 diputado en la A\n",
+      "Documento encontrado: #10, cs: 0.029947\n",
+      "Documento #153: Mario Rafael Rodríguez Mario Rafael Rodríguez Rodríguez ( 14 de septiembre de 1981, Ciudad de Guatemala) es un fútbolbolista guatemalteco, juegaba como delantero, actualmente no tiene equipo, y su ultimo equipo fue la Universidad de San Carlos, y también se ha desempeñado a nivel internacional, para el Columbus Crew. Ha formado parte de la Selección de fútbol de Guatemala. Conocido por el asesinato del portero Danny Ortiz.\n",
+      "Rodríguez inició su carrera en 2002 en Guatemala con Comunicaciones, dond\n",
       "\n"
      ]
     }
@@ -195,20 +178,6 @@
     "    if (i > 10):\n",
     "        break\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
